crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.capture-ref-for-mutation/error.txt
Found 2 errors:

Error: Cannot access refs during render

React refs are values that are not needed for rendering. Refs should only be accessed outside of render, such as in event handlers or effects. Accessing a ref value (the `current` property) during render can cause your component not to update as expected (https://react.dev/reference/react/useRef).

error.capture-ref-for-mutation.ts:12:13
  10 |   };
  11 |   const moveLeft = {
> 12 |     handler: handleKey('left')(),
     |              ^^^^^^^^^^^^^^^^^ This function accesses a ref value
  13 |   };
  14 |   const moveRight = {
  15 |     handler: handleKey('right')(),

Error: Cannot access refs during render

React refs are values that are not needed for rendering. Refs should only be accessed outside of render, such as in event handlers or effects. Accessing a ref value (the `current` property) during render can cause your component not to update as expected (https://react.dev/reference/react/useRef).

error.capture-ref-for-mutation.ts:15:13
  13 |   };
  14 |   const moveRight = {
> 15 |     handler: handleKey('right')(),
     |              ^^^^^^^^^^^^^^^^^^ This function accesses a ref value
  16 |   };
  17 |   return [moveLeft, moveRight];
  18 | }
